added some semantic elements

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <div class="toolbar">
+  <header class="toolbar">
     <h1>Analysis Sandbox</h1>
     <div id="buttons"></div>
-  </div>
+  </header>
   <div class="sidebar" id="sidebar"></div>
-  <div class="main-content">
+  <main class="main-content">
     <div id="loader">
       <svg width="274" height="38" xmlns="http://www.w3.org/2000/svg" style="display: block; margin: 0 auto;">
         <g>
@@ -53,7 +53,7 @@
       </svg>
       <p>Loading</p>
     </div>
-  </div>
+  </main>
   <div class="config-container" id="config"></div>
   <script type="module" src="./index.js"></script>
 </body>
