got importmap aliasing working

--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
   <link rel="stylesheet" href="./style.css">
 
   <script type="importmap">
-    { "imports": { "@app/": "./lib/app/" } }
+    {
+      "imports": {
+        "@app/": "./lib/app/",
+        "@base/": "./lib/base/",
+        "@prelude-uni/": "./lib/prelude/university/"
+      }
+    }
   </script>
 </head>
 <body>
