incremental typescript builds

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         },
         "./lib/prelude/": {
           "@base/": "./lib/base/"
+        },
+        "./lib/ui/": {
+          "@base/": "./lib/base/"
         }
       }
     }
