refactored ui/application

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
           "@base/": "./lib/base/"
         },
         "./lib/ui/": {
+          "@ui/": "./lib/ui/",
           "@base/": "./lib/base/"
         }
       }
