--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Analysis Sandbox</title>
   <link rel="stylesheet" href="./style.css">
+  <link rel="modulepreload" href="./lib/base/util/type.js">
+  <link rel="modulepreload" href="./lib/ui/application/events.js">
+  <link rel="modulepreload" href="./lib/ui/config/events.js">
+  <link rel="modulepreload" href="./lib/ui/navigation/events.js">
   <script type="importmap">
     {
       "scopes": {
@@ -39,7 +43,6 @@
     </div>
   </main>
   <div class="config-container" id="config"></div>
-  <script type="module" src="./index.js" defer></script>
   <script>
     /**
      * Generate loading animation.
@@ -63,5 +66,6 @@
       group.appendChild(rect);
     }
   </script>
+  <script type="module" src="./index.js" defer></script>
 </body>
 </html>
