--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Analysis Sandbox</title>
+  <link rel="stylesheet" href="./lib/ui/base/reset.css">
   <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./lib/ui/application/style-shared.css">
   <link rel="modulepreload" href="./lib/base/util/type.js">
   <link rel="modulepreload" href="./lib/ui/application/events.js">
   <link rel="modulepreload" href="./lib/ui/config/events.js">
