--- a/index.html
+++ b/index.html
@@ -38,9 +38,7 @@
   <div class="sidebar" id="sidebar"></div>
   <main class="main-content">
     <div id="loader">
-      <svg id="loader-svg" width="274" height="38">
-        <g/>
-      </svg>
+      <svg id="loader-svg" width="274" height="38"><g/></svg>
       <p>Loading</p>
     </div>
   </main>
