stopped importing context specific file everywhere

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         "./lib/app/": {
           "@app/": "./lib/app/",
           "@base/": "./lib/base/",
-          "@prelude-uni/": "./lib/prelude/university/"
+          "@prelude-uni/": "./lib/prelude/university/",
+          "@prelude-econ/": "./lib/prelude/econ/"
         },
         "./lib/prelude/": {
           "@base/": "./lib/base/"
