--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </script>
 </head>
 <body>
-  <header class="toolbar">
+  <header class="header">
     <h1>Analysis Sandbox</h1>
     <div id="buttons"></div>
   </header>
