--- a/index.html
+++ b/index.html
@@ -32,9 +32,8 @@
   </script>
 </head>
 <body>
-  <header class="header">
-    <h1>Analysis Sandbox</h1>
-    <div id="buttons"></div>
+  <header id="header" class="header">
+    <h1 slot="title">Analysis Sandbox</h1>
   </header>
   <div class="sidebar" id="sidebar"></div>
   <main class="main-content">
