cleaned some formatting

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       "scopes": {
         "./lib/app/": {
           "@app/": "./lib/app/",
+          "@assets/": "./assets/",
           "@base/": "./lib/base/",
           "@prelude-uni/": "./lib/prelude/university/",
           "@prelude-econ/": "./lib/prelude/econ/"
