provide complete proposal

--- a/lib/remote/app-embed/sec-2102-cobb-douglas/index.html
+++ b/lib/remote/app-embed/sec-2102-cobb-douglas/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- akst::bundle::meta output-path="app-widget/cobb-douglas.html" -->
+    <!-- akst::bundle::meta output-path="app-widget/cobb-douglas/index.html" -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../../../style.css">
