--- a/index.html
+++ b/index.html
@@ -8,10 +8,6 @@
   <link rel="stylesheet" href="./lib/ui/base/reset.css">
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="./lib/ui/chrome/application/style-shared.css">
-  <link rel="modulepreload" href="./lib/base/util/type.js">
-  <link rel="modulepreload" href="./lib/ui/chrome/application/events.js">
-  <link rel="modulepreload" href="./lib/ui/chrome/config/events.js">
-  <link rel="modulepreload" href="./lib/ui/chrome/navigation/events.js">
   <script type="importmap">
     {
       "scopes": {
@@ -26,6 +22,7 @@
           "@base/": "./lib/base/"
         },
         "./lib/ui/": {
+          "@app/": "./lib/app/",
           "@ui/": "./lib/ui/",
           "@base/": "./lib/base/"
         }
